--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   "dependencies": {
     "@nestjs/common": "^7.6.17",
     "@nestjs/core": "^7.6.17",
+    "@nestjs/jwt": "^7.2.0",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.6.17",
     "express-session": "^1.17.2",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
